[gd_scene load_steps=8 format=2]

[ext_resource path="res://Screens/OverlayDictionary/OverlayDictionary.gd" type="Script" id=1]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/OptionsFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/OverlayDictionary/DictionaryTermActor.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.564706, 0.623529, 0.596078 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.105882, 0.32549, 0.658824 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -950.0
margin_top = -540.0
margin_right = 950.0
margin_bottom = 540.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="CategorySelect" type="ScrollContainer" parent="Container"]
margin_bottom = 1080.0
scroll_horizontal_enabled = false

[node name="CategoryList" type="VBoxContainer" parent="Container/CategorySelect"]
theme = SubResource( 1 )

[node name="Container" type="Control" parent="Container"]
margin_right = 600.0
margin_bottom = 1080.0
rect_min_size = Vector2( 600, 1080 )

[node name="Panel" type="Panel" parent="Container/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -595.0
rect_min_size = Vector2( 600, 1080 )
custom_styles/panel = SubResource( 3 )

[node name="ItemSelect" type="ScrollContainer" parent="Container/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -2.0
margin_bottom = -15.0
size_flags_vertical = 4

[node name="TermList" type="VBoxContainer" parent="Container/Container/ItemSelect"]
margin_right = 550.0
margin_bottom = 100.0
custom_constants/separation = 20
alignment = 2

[node name="Panel" parent="Container/Container/ItemSelect/TermList" instance=ExtResource( 5 )]
rect_min_size = Vector2( 550, 100 )

[node name="RightPanel" type="Control" parent="Container"]
margin_left = 600.0
margin_right = 1450.0
margin_bottom = 1080.0
rect_min_size = Vector2( 850, 0 )

[node name="Panel" type="Panel" parent="Container/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="HeaderLabel" type="Label" parent="Container/RightPanel"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "THIS IS A HEADER"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Container/RightPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -403.0
margin_right = 400.0
margin_bottom = 522.0
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="Container/RightPanel/ScrollContainer"]
margin_right = 800.0
margin_bottom = 765.0
rect_min_size = Vector2( 800, 604 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 2 )
text = "    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
fit_content_height = true
scroll_active = false
